fix margin on smaller headings...

--- a/_sass/eleven.scss
+++ b/_sass/eleven.scss
@@ -17,7 +17,7 @@ body {
 
 .post-meta { text-align: right; }
 
-h1, h2, h3, h4, h5, h6 { 
+h1{ 
     margin: 0px;
 }
 
